# cppdoc-plugin

./: .gitignore  DECISIONS.md  check-dev-env.sh  setup_venv.sh
.github/workflows/: ci.yml
adapters/vscode/cpp-doc/: CHANGELOG.md  README.md  package-lock.json  package.json  test_lookup.js
adapters/vscode/cpp-doc/native/: cppdoc_core.node
adapters/vscode/cpp-doc/src/: extension.ts
core/cppdoc_core/: Cargo.toml  build.rs
core/cppdoc_core/src/: lib.rs
docs/: fetch_docs.py  index.json
docs/archive/std/: vector.html
